<resources>
    <string name="app_name">Personal Information Management</string>
    <string name="day">Day</string>
    <string name="to_do">Add To Do</string>
    <string name="time_from_text_view">Time From</string>
    <string name="add_to_do">Add To Do</string>
    <string name="update_btn">Update</string>
    <string name="add_todo_btn">Add To Do</string>
    <string name="start">Start</string>
    <string name="venue_text">Venue</string>

    <string-array name="spinner_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Monday-Friday</item>
        <item>Monday-Saturday</item>
        <item>Everyday</item>
    </string-array>
    <string-array name="spinner_time">
        <item>01.00</item>
        <item>02.00</item>
        <item>03.00</item>
        <item>04.00</item>
        <item>05.00</item>
        <item>06.00</item>
        <item>07.00</item>
        <item>08.00</item>
        <item>09.00</item>
        <item>10.00</item>
        <item>11.00</item>
        <item>12.00</item>
        <item>13.00</item>
        <item>14.00</item>
        <item>15.00</item>
        <item>16.00</item>
        <item>17.00</item>
        <item>18.00</item>
        <item>19.00</item>
        <item>20.00</item>
        <item>21.00</item>
        <item>22.00</item>
        <item>23.00</item>
        <item>24.00</item>
    </string-array>

</resources>
